--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 
-    <h1>UCL & IBM Summer Project</h1>
+    <h1>UCL & IBM Summer Project: 陈胖胖今天吃了啥</h1>
+    <a href="{{url_for('test')}}">我是测试</a>
     <p>My first paragraph.</p>
 
 </body>
